fix tabs on tablet

--- a/src/css/portfolio.scss
+++ b/src/css/portfolio.scss
@@ -55,7 +55,7 @@ nav {
 
     .tab-label {
         height: 45px;
-        min-width: 300px;
+        min-width: 330px;
         border-bottom: 0;
         border-radius: 10px 10px 0 0;
         box-sizing: border-box;
